--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,14 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+html,
+body {
+  height: 100%;
+}
+
+button,
+input,
+textarea {
+  pointer-events: auto;
+}
