--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,12 @@
+* {
+  box-sizing: border-box;
+}
+
+:root {
+  touch-action: pan-x pan-y;
+}
+
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -9,6 +16,7 @@ body {
 
 html,
 body {
+  margin: 0;
   height: 100%;
 }
 
@@ -16,4 +24,8 @@ button,
 input,
 textarea {
   pointer-events: auto;
+}
+
+canvas {
+  max-width: 100vw;
 }
